testing bio card

--- a/index.html
+++ b/index.html
@@ -1,14 +1,94 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div>
-        <p>hell world</p>
-    </div>
+    <div class="container">
+        <div class="bio">
+            <div class="logo">
+                <img src="./img/NH.png" alt="">
+            </div>
+            <div class="headshot">
+                <img src="./img/avatar-1577909_1280 (1).png" alt="">
+            </div>
+            <div class="bio">
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec nisi nec elit iaculis suscipit.
+                    Sed
+                    varius eros enim, ut posuere lorem hendrerit non. Duis bibendum at odio eget semper. Suspendisse
+                    porta
+                    felis sit amet ligula convallis eleifend. Fusce vel semper justo. Etiam nunc diam, accumsan sed
+                    lacinia
+                    vel, mollis eu lacus. Quisque at velit quis ante imperdiet ultricies vel eu massa. Integer id
+                    sollicitudin ipsum. Donec neque nibh, cursus ac rhoncus in, imperdiet lacinia massa. Quisque vel
+                    varius
+                    nulla. Etiam ante urna, rutrum faucibus imperdiet fermentum, imperdiet vitae nunc. Ut in ex finibus,
+                    auctor lectus vitae, vulputate dolor. Mauris laoreet arcu eget semper sollicitudin. Vivamus eleifend
+                    odio sed metus dapibus mollis.
+                    <br>
+                    <br>
+                    Nullam in laoreet odio. Ut faucibus tellus auctor ante tincidunt porttitor. Etiam a ex non libero
+                    sodales consequat ac eget nibh. Donec maximus fermentum nunc, at sollicitudin erat faucibus et.
+                    Praesent
+                    tincidunt laoreet pretium. Etiam sit amet dolor in nulla accumsan vestibulum. Suspendisse laoreet
+                    erat
+                    vitae lacinia vestibulum. Vestibulum quis justo vitae erat ullamcorper facilisis nec ac lacus.
+                    Praesent
+                    vel tellus mollis, convallis nisl sed, volutpat odio. Nam purus metus, pellentesque eu scelerisque
+                    in,
+                    vestibulum eu sapien. Curabitur non orci porttitor, dapibus eros vitae, imperdiet eros. Orci varius
+                    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam quis ipsum magna.
+                    Proin
+                    cursus interdum lectus, sed mollis augue sagittis ac. Vestibulum justo enim, placerat nec sodales
+                    id,
+                    lacinia sit amet leo.
+                </p>
+
+            </div>
+
+            <div class="education">
+                <h2>Education and Training</h2>
+                <span id="dots">...</span><span id="more"></span>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                </ul>
+            </div>
+
+            <div class="certifications">
+                <h2>Certifications and
+                    Affiliations</h2>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                </ul>
+            </div>
+
+            <div class="clinical">
+                <h2>Clinical Interests</h2>
+                <ul>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                    <li>Lorem Ipsum</li>
+                </ul>
+            </div>
+        </span>
+        <button onclick="myFunction()" id="myBtn">Read more</button>
+        </div>
+        
     
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
