--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,85 +10,105 @@
 
 <body>
     <div class="container">
-        <div class="bio">
-            <div class="logo">
-                <img src="./img/NH.png" alt="">
-            </div>
-            <div class="headshot">
-                <img src="./img/avatar-1577909_1280 (1).png" alt="">
-            </div>
-            <div class="bio">
-                <h1>Lorem Ipsum</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec nisi nec elit iaculis suscipit.
-                    Sed
-                    varius eros enim, ut posuere lorem hendrerit non. Duis bibendum at odio eget semper. Suspendisse
-                    porta
-                    felis sit amet ligula convallis eleifend. Fusce vel semper justo. Etiam nunc diam, accumsan sed
-                    lacinia
-                    vel, mollis eu lacus. Quisque at velit quis ante imperdiet ultricies vel eu massa. Integer id
-                    sollicitudin ipsum. Donec neque nibh, cursus ac rhoncus in, imperdiet lacinia massa. Quisque vel
-                    varius
-                    nulla. Etiam ante urna, rutrum faucibus imperdiet fermentum, imperdiet vitae nunc. Ut in ex finibus,
-                    auctor lectus vitae, vulputate dolor. Mauris laoreet arcu eget semper sollicitudin. Vivamus eleifend
-                    odio sed metus dapibus mollis.
-                    <br>
-                    <br>
-                    Nullam in laoreet odio. Ut faucibus tellus auctor ante tincidunt porttitor. Etiam a ex non libero
-                    sodales consequat ac eget nibh. Donec maximus fermentum nunc, at sollicitudin erat faucibus et.
-                    Praesent
-                    tincidunt laoreet pretium. Etiam sit amet dolor in nulla accumsan vestibulum. Suspendisse laoreet
-                    erat
-                    vitae lacinia vestibulum. Vestibulum quis justo vitae erat ullamcorper facilisis nec ac lacus.
-                    Praesent
-                    vel tellus mollis, convallis nisl sed, volutpat odio. Nam purus metus, pellentesque eu scelerisque
-                    in,
-                    vestibulum eu sapien. Curabitur non orci porttitor, dapibus eros vitae, imperdiet eros. Orci varius
-                    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam quis ipsum magna.
-                    Proin
-                    cursus interdum lectus, sed mollis augue sagittis ac. Vestibulum justo enim, placerat nec sodales
-                    id,
-                    lacinia sit amet leo.
-                </p>
 
-            </div>
+        <div class="bioContainer">
+            <div class="bioInfo">
+                <div class="logo">
+                    <img src="./img/NOS_Logo_color.png" alt="NOS Logo">
+                </div>
+                <div class="headshot">
+                    <img src="./img/AIMG2733_1 mark crossen.JPG" alt="Provider Headshot">
+                </div>
 
-            <div class="education">
-                <h2>Education and Training</h2>
-                <span id="dots">...</span><span id="more"></span>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                </ul>
-            </div>
+                <div class="provider">
+                    <p>Place Holder, MD</p>
+                </div>
 
-            <div class="certifications">
-                <h2>Certifications and
-                    Affiliations</h2>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                </ul>
-            </div>
+                <div class="aboutMD">
+                    <h2>Northside Doctor Office</h2>
+                    <h3>Comprehensive Primary Care for Adults<br>
+                        Personalized, comprehensive health care and <br>
+                        direct physician access for adult men & women</h3>
+                </div>
 
-            <div class="clinical">
-                <h2>Clinical Interests</h2>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                </ul>
+                <div class="bio">
+                    <h1>About Our Office</h1>
+                    <p>Welcome to Hospital Sports Medicine, a premier destination for athletes and active individuals
+                        seeking expert care and innovative treatment. We are committed to helping you achieve your
+                        highest level of performance while providing the support and resources necessary for a full and
+                        swift recovery from injuries. Whether you’re a seasoned professional, an amateur enthusiast, or
+                        someone who enjoys staying active for health and wellness, our dedicated team is here to ensure
+                        you receive the specialized care you deserve.</p>
+
+                    <span id="dots">...</span>
+                    <span id="more" style="display: none;">
+                        <h1>About Our Provider</h1>
+                        <p>Dr. Pombo joins Northside Hospital Sports Medicine as a highly respected surgeon in the
+                            Orthopaedic Sports Medicine Community. He is the Director of Northside Hospital’s Soccer
+                            Medicine Program and is considered one of the leading experts on youth and adult sports
+                            injuries, surgery of the shoulder and knee, sports medicine and the aging athlete, and is
+                            well known as a national/international leader in the field of soccer medicine. Dr. Pombo is
+                            internationally recognized as a FIFA diplomat certifying him as a specialist in soccer
+                            medicine and soccer injuries. Dr. Pombo currently serves as a pool physician for the US
+                            Soccer Federation and a consultant for several professional soccer clubs throughout North
+                            America. He is the head team physician for several Atlanta area high schools and is a
+                            consultant for several soccer clubs in the Atlanta area. Dr. Pombo enjoys taking care of
+                            athletes of all ages and keeping them engaged in an active lifestyle no matter what sport or
+                            activity they are involved in.</p>
+
+                        <div class="education">
+                            <h2>Education and Training</h2>
+                            <ul>
+                                <li>Residency, Internal Medicine and Pediatrics,
+                                    Medical University of South Carolina, Charleston, SC</li>
+                                <li>Doctor of Medicine, Mercer University School of
+                                    Medicine, Savannah, GA</li>
+                                <li>Bachelor of Science with Honors, Biology, University
+                                    of Georgia, Athens, GA</li>
+                            </ul>
+                        </div>
+
+                        <div class="certifications">
+                            <h2>Certifications and Affiliations</h2>
+                            <ul>
+                                <li>Member, American College of Physician</li>
+                                <li>Member, American College of Lifestyle Medicine</li>
+                            </ul>
+                        </div>
+
+                        <div class="clinical">
+                            <h2>Clinical Interests</h2>
+                            <ul>
+                                <li>Preventative Health Measures</li>
+                            </ul>
+                        </div>
+                    </span>
+                    <button onclick="myFunction()" id="myBtn">Read more</button>
+                </div>
+
+                <footer>
+                    <div class="footerImg">
+                        <img src="./img/NOS_Logo_color.png" alt="NOS Logo" style="width: 50%; height: auto;">
+                    </div>
+                    <div class="footerContainer">
+                        <div class="officeInfo">
+                            <p><b>Phone:</b> 123.123.1234<br>
+                                <b>Fax:</b> 555.555.1234<br>
+                                <b>Email:</b> info@email.com<br>
+                                <b>Web:</b> website.com
+                            </p>
+                        </div>
+                        <div class="hours">
+                            <p><b>Mon - Thurs:</b> 8am - 5pm<br>
+                                <b>Friday:</b> 9am - 3pm
+                            </p>
+                        </div>
+                    </div>
+                </footer>
             </div>
-        </span>
-        <button onclick="myFunction()" id="myBtn">Read more</button>
         </div>
-        
-    
     </div>
+
     <script src="script.js"></script>
 </body>
 
